# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter_and_tests.yaml  tests.yaml
diff/: generate_diff.py
diff/scripts/: gendiff.py
hexlet_python_package/scripts/: gendiff.py
tests/: result_json.py  test_generate_diff.py
tests/fixtures/: result_gen_diff.py
