[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["hex-learning <leontiytsagoiko@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_python_package"}]

[tool.poetry.dependencies]
python = "^3.10"
 

[tool.poetry.scripts]
gendiff = "hexlet_python_package.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
