[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["hex-learning <leontiytsagoiko@gmail.com>"]
readme = "README.md"
packages = [{include = "diff"}]

[tool.poetry.dependencies]
python = "^3.10"
 

[tool.poetry.scripts]
gendiff = "diff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
